# wq-brain-mcp

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml  wq_operators_cleaned.json
wq_mcp/: __init__.py  __main__.py  config.py  expression_fingerprint.py  expression_validator.py  logging_config.py  server.py  utils.py
wq_mcp/core/: __init__.py  alpha_service.py  api_client.py  expression_service.py  knowledge_service.py  queue_manager.py  research_service.py  web_service.py
wq_mcp/models/: __init__.py  common.py  expression.py  research.py  submission.py
wq_mcp/tools/: alpha.py  expression.py  knowledge.py  registry.py  research.py  simcheck.py  submission.py  web.py
