[project]
name = "wq-mcp-brain"
version = "0.1.0"
description = "MCP Server for WorldQuant Brain alpha factor mining"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "ddgs>=9.0",
]
